--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,11 +1,25 @@
 <div class="postContainer">
   <div class="upvotes">
-    <button mat-icon-button color="warn" class="upvote" (click) = "upvotePost()"><mat-icon>arrow_upward</mat-icon></button>
-    {{this.post.upvotes}}
-    <button mat-icon-button color="primary" class="downvote" (click) = "downvotePost()"><mat-icon>arrow_downward</mat-icon></button>
-    </div>
-  <div class = "postContent">
-    <h3>{{this.post.title}}</h3>
-    <a [href]="this.post.link">{{this.post.link}}</a>
+    <button mat-icon-button color="warn" class="upvote" (click)="upvotePost()">
+      <mat-icon>arrow_upward</mat-icon>
+    </button>
+    {{ this.post.upvotes }}
+    <button
+      mat-icon-button
+      color="primary"
+      class="downvote"
+      (click)="downvotePost()"
+    >
+      <mat-icon>arrow_downward</mat-icon>
+    </button>
+  </div>
+  <div class="postContent">
+    <h3>{{ this.post.title }}</h3>
+    <a [href]="this.post.link">{{ this.post.link }}</a>
+  </div>
+  <div class="deletePost">
+    <button mat-icon-button color="warn" (click)="deletePost(this.post.id)">
+      <mat-icon>remove_circle</mat-icon>
+    </button>
   </div>
 </div>
